# zscaler-incident-helper

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  config.py  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements.txt  version.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docker.yml  lint.yml  release.yml
api/: main.py  models.py
crawler/: crawler.py  sitemap_parser.py
docs/: API.md  ARCHITECTURE.md  BEGINNER_GUIDE.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  EXAMPLES.md  GLOSSARY.md  HARDWARE_REQUIREMENTS.md  OPERATIONS.md  QUICK_START.md  ROADMAP.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/adr/: ADR-001-embedding-model.md  ADR-002-single-process-uvicorn.md  ADR-003-openai-compatible-api.md  ADR-004-deterministic-chunk-ids.md  ADR-005-no-deepseek.md
docs/sop/: 01-initial-setup.md  02-daily-operations.md  03-knowledge-base.md  04-incident-investigation.md  05-llm-providers.md  06-troubleshooting.md  README.md
llm/: anthropic_provider.py  base.py  deepseek_provider.py  factory.py  groq_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
pipeline/: chunker.py  embedder.py  indexer.py
rag/: generator.py  log_parser.py  retriever.py
scripts/: audit_metadata.py  check_staged.py  crawl_all.py  doctor.py  ingest.py  test_crawl.py  validate_config.py  wait_healthy.py
tests/: conftest.py
tests/fixtures/: sample_logs.txt
tests/unit/: test_api_auth.py  test_chunker.py  test_config.py  test_factory.py  test_log_parser.py
